kfw: Help text updates
Signed-off-by: Kevin Wasserman <kevin.wasserman@painless-security.com>

--- a/src/windows/leash/htmlhelp/html/Button_Menu.htm
+++ b/src/windows/leash/htmlhelp/html/Button_Menu.htm
@@ -21,7 +21,7 @@ Use the main buttons in the riboon menu to work with tickets and passwords.  Sev
 
  <tr><th id="th2">Get Ticket </th>
  <td>Get a new Kerberos ticket. </td>
-<td>Click this button to open the Get Ticket window. Enter or select your Kerberos <a href="JavaScript:popup.TextPopup(popupPrincipal, popfont,9,9,-1,-1)">principal</a> and password.  To verify or change ticket settings and flags, click  Show Advanced Settings. When you are finished, click Okay. <br>
+<td>Click this button to open the Get Ticket window. Enter or select your Kerberos <a href="JavaScript:popup.TextPopup(popupPrincipal, popfont,9,9,-1,-1)">principal</a> and password.  To verify or change ticket settings and flags, click  Show Advanced. When you are finished, click Okay. <br>
 <a href="HTML/Get_Tickets.htm">More Get Tickets help</a></td></tr>
 
  
@@ -45,7 +45,7 @@ This button is greyed out and not accessible if the Automatically Import option 
 <a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
 </td>
  <td>
-Imported  Windows domain tickets are obtained and renewed by the Windows Logon session, so if you destroy them in  Kerberos for Windows they are not destroyed in the Windows session. Kerberos would immediately import them again.  <br>
+Imported  Windows domain tickets are obtained and renewed by the Windows Logon session, so if you destroy them in  MIT Kerberos they are not destroyed in the Windows session. Kerberos would immediately import them again.  <br>
 <a href="HTML/Destroy_Tickets.htm">How to destroy tickets </a></td>
 </tr>
 
