--- a/src/windows/leash/htmlhelp/html/Change_Password.htm
+++ b/src/windows/leash/htmlhelp/html/Change_Password.htm
@@ -31,7 +31,7 @@ To change your password:</p>
 <p>
 Remember to use your new password the next time you obtain tickets.</p>
 <p>
-<b>Imported Ticket Note: </b> If  you change the password for a principal with imported tickets,  you must use your new password when you use that principal to log on to your Windows domain with a Windows Logon session. <a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
+<b> If  you change the password for a principal with imported tickets,</b>  you must use your new password when you use that principal to log on to your Windows domain with a Windows Logon session. <a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
 </p>
 
 <H2>Related Help</H2>
