--- a/src/windows/leash/htmlhelp/html/Command_Line.htm
+++ b/src/windows/leash/htmlhelp/html/Command_Line.htm
@@ -8,7 +8,7 @@
 <BODY>
 <H1>Kerberos with Command Prompt </H1>
 <p>
-Kerberos for Windows can be run from the Command Prompt in Windows. The following commands are available. Click a command name to see the relevant UNIX man page.</p>
+MIT Kerberos can be run from the Command Prompt in Windows. The following commands are available. Click a command name to see the relevant UNIX man page.</p>
 
 <table class="noborder" >
 <tr><td> <a href="HTML/KINIT.htm">KINIT</a></td><td> Log in to Kerberos and obtain tickets. </td></tr>
