--- a/src/windows/leash/htmlhelp/html/Export_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Export_Tickets.htm
@@ -14,7 +14,7 @@ You can export tickets into your Windows Logon session so they can be used in yo
 <p>
 To export  tickets you have already obtained with the Get Ticket window into your Windows Logon session:</p>
 <ol>
-<li>Click the Export Ticket button.</li>
+<li>Click the Export Ticket button in the Home tab.</li>
 <li>Click Okay to confirm that you want to export the tickets and destroy any you already have for  your Windows Logon session.
 </ol>
 
