--- a/src/windows/leash/htmlhelp/html/Forget_Password.htm
+++ b/src/windows/leash/htmlhelp/html/Forget_Password.htm
@@ -10,7 +10,7 @@
 <p>
 If you forget your password, contact your administrator or help desk. </p>
 <p>
- Usually you will be given  a new, temporary password. If so, open Kerberos for Windows and use the temporary password to change your password to a new one that only you know.</p>
+ Usually you will be given  a new, temporary password. If so, open MIT Kerberos and use the temporary password to change your password to a new one that only you know.</p>
 
 <H3>Related help</H3>
 
