--- a/src/windows/leash/htmlhelp/html/Get_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Get_Tickets.htm
@@ -12,8 +12,8 @@ Before you can access services that use Kerberos for security, you must obtain a
 <p>
 To get a ticket:
 <ol>
-<li>Click the Get Ticket button or use the <a href="JavaScript:popup.TextPopup(popupKeyboardShortcut, popfont,9,9,-1,-1)">keyboard shortcut</a>  [Ctrl + t].</li>
-<li>Your principal is your user name combined with the Kerberos <a href="JavaScript:popup.TextPopup(popupRealm, popfont,9,9,-1,-1)">realm</a>, you are part of. For example, <span class="typed">jdoe@SALES.WIDGET.COM.</span> Enter your principal or select it from the pull down arrow if the correct principal is not already visible.  Principals you have previously entered and saved are available in the pull down list. </li>
+<li>Click the Get Ticket button in the Home tab or use the <a href="JavaScript:popup.TextPopup(popupKeyboardShortcut, popfont,9,9,-1,-1)">keyboard shortcut</a>  [Ctrl + t].</li>
+<li>Your principal is your user name combined with the Kerberos <a href="JavaScript:popup.TextPopup(popupRealm, popfont,9,9,-1,-1)">realm</a> you are part of. For example, <span class="typed">jdoe@SALES.WIDGET.COM.</span> Enter your principal or select it from the pull down arrow if the correct principal is not already visible.  Principals you have previously entered and saved are available in the pull down list. </li>
 
 
 
@@ -21,10 +21,10 @@ To get a ticket:
 
 <li>To save this principal so you will not have to enter it again, select the "Remember this principal" checkbox. If you have multiple principals, Kerberos can remember all of them.</li>
 
-<li>To verify or change ticket settings, click <font id="button"> Show Advanced Settings </font> at the bottom of the window and then make any necessary changes.  </li> <ul >
+<li>To verify or change ticket settings, click <font id="button"> Show Advanced </font> at the bottom of the window and then make any necessary changes.  </li> <ul >
 <li><b>To change the ticket lifetime</b>, click and drag the Ticket Lifetime slider.  </li>
-<li><b>To get a forwardable ticket</b>, click the Forwardable and Proxiable checkbox.</li>
-<li><b>To get a renewable ticket</b>, click the Renewable checkbox.</li>
+<li><b>To get a forwardable ticket</b>, select  the Forwardable and Proxiable checkbox.</li>
+<li><b>To get a renewable ticket</b>, select  the Renewable checkbox.</li>
 </ul>
  For more information, go to <a href="HTML/Ticket_Settings.htm">Ticket settings help</a>. 
 
