--- a/src/windows/leash/htmlhelp/html/Kerberos.htm
+++ b/src/windows/leash/htmlhelp/html/Kerberos.htm
@@ -11,7 +11,7 @@
 <H1> Kerberos </H1>
 <H2>What is Kerberos? </H2>
 <p>
-Keberos is a network authentication protocol that allows users to securely access services over a physically insecure network. Kerberos, or Kerberos for Windows, is also the name of this application. Kerberos for Windows provides an easy interface to the Kerberos protocol.</p>
+Keberos is a network authentication protocol that allows users to securely access services over a physically insecure network. Kerberos, or MIT Kerberos, is also the name of this application. MIT Kerberos provides an easy interface to the Kerberos protocol.</p>
 
 <p>
 In addition to providing secure access to services, Kerberos  adds convenience by allowing you to sign on just once to use many network resources such as servers, hosts, or other services.</p>
