--- a/src/windows/leash/htmlhelp/html/Keyboard_Shortcuts.htm
+++ b/src/windows/leash/htmlhelp/html/Keyboard_Shortcuts.htm
@@ -9,7 +9,7 @@
 <H1>Keyboard Shortcuts </H1>
 
 <p>
-You can use keyboard shortcuts to reach several of the more frequently used functions in Kerberos for Windows. To use a shortcut, hold down the <span class="typed"> [Ctrl] </span> key on your computer's keyboard while pressing the appropriate letter key as shown in the table below.
+You can use keyboard shortcuts to reach several of the more frequently used functions in MIT Kerberos. To use a shortcut, hold down the <span class="typed"> [Ctrl] </span> key on your computer's keyboard while pressing the appropriate letter key as shown in the table below.
 </p>
 <p></p>
 <table>
