--- a/src/windows/leash/htmlhelp/html/MS2MIT.htm
+++ b/src/windows/leash/htmlhelp/html/MS2MIT.htm
@@ -18,7 +18,7 @@
 
 <H2>DESCRIPTION</H2>
 <p>
-The <span class="command"> ms2mit  </span> command is used to  import Kerberos credentials from the current Windows Logon         Session and insert them into the Kerberos for Windows  default Credentials Cache. </p>
+The <span class="command"> ms2mit  </span> command is used to  import Kerberos credentials from the current Windows Logon  Session and insert them into the MIT Kerberos default Credentials Cache. </p>
 
 <H2>SEE ALSO</H2>
 <ul id="helpul">
