--- a/src/windows/leash/htmlhelp/html/Make_Default.htm
+++ b/src/windows/leash/htmlhelp/html/Make_Default.htm
@@ -14,7 +14,7 @@ If you have only one principal, that principal is automatically the default.</p>
 
 <H3>Set Default Principal</H3>
 <ol>
-<li>Select the principal by clicking it in the main window.</li>
+<li>Select the principal by clicking it in the main window (if the principal is not listed, first get tickets for it). </li>
 <li>Click the Make Default button. </li>
 </ol>
 <p>
