--- a/src/windows/leash/htmlhelp/html/Principals.htm
+++ b/src/windows/leash/htmlhelp/html/Principals.htm
@@ -25,9 +25,9 @@ Your principal is your Kerberos identity. It is your user name plus the Kerberos
 <p>
 If like many users you just have one Kerberos identity, you will have just one principal. 
 </p><p>
-In most installations, Kerberos for Windows knows your realm, so when you start to enter your principal in the Get Ticket window it will auto-complete for you. If you select the "Remember this principal" checkbox you won't have to enter your principal again. </p>
+In most installations, MIT Kerberos knows your realm, so when you start to enter your principal in the Get Ticket window it will auto-complete for you. If you select the "Remember this principal" checkbox you won't have to enter your principal again. </p>
 <p>
-The main window shows your principal, along with information about tickets issued to it.  Click the blue triangle to the left of the principal to see all of your tickets.  <a href="HTML/View_Tickets.htm"> Click for details</a>
+The main window shows your principal, along with information about tickets issued to it.   <a href="HTML/View_Tickets.htm"> View Tickets help</a>
 </p>
 <p>
 <a href=#top>Back to top</a></p>
@@ -48,10 +48,10 @@ Your default principal appears in bold font in the main window. If you have a si
 <p>
 When you try to use a Kerberized application, the application attempts to authenticate you by requesting your credentials from Kerberos. Some applications do this by asking for a specific principal's credentials, but others ask generically.
 <p>
-When applications make a generic request, Kerberos does not know which of your principal is being authenticated and checks the default principal for tickets. If the default principal is not the correct one, the application will usually simply fail to work with no warning or notice. 
+When applications make a generic request, Kerberos does not know which of your principals is being authenticated and checks the default principal for tickets. If the default principal is not the correct one, the application will usually simply fail to work with no warning or notice. 
 </p>
 <p>
-To set your default principal, select a principal in the main window and then click the Make Default button. <a href="HTML/Make_Default.htm">Click for details</a>
+To set your default principal, select a principal in the main window and then click the Make Default button. <a href="HTML/Make_Default.htm">Make Default help</a>
 </p>
 <p>
 <a href=#top>Back to top</a></p>
