--- a/src/windows/leash/htmlhelp/html/Troubleshooting.htm
+++ b/src/windows/leash/htmlhelp/html/Troubleshooting.htm
@@ -28,7 +28,7 @@ The ticket cannot be renewed. This could be because the ticket was not flagged a
 
 <a name=" expire">  <H3>  Why did my tickets expire even though I had Automatically Renew Tickets turned on?  </a></H3> 
 <p>
- Kerberos for Windows can only renew your tickets if the program is running and active. It cannot  renew your tickets if you exit the program or if your computer is turned off or in hibernation mode.</p>
+ MIT Kerberos can only renew your tickets if the program is running and active. It cannot  renew your tickets if you exit the program or if your computer is turned off or in hibernation mode.</p>
 <p>
 <a href="#top">Back to top</a></p>
 
@@ -44,7 +44,7 @@ Your Kerberos installation is configured for a maximum ticket lifetime length th
 <p>
 Several conditions can cause difficulties importing tickets if you are using a Windows Vista operating system or earlier. If the ticket you want to import shows an Import Status of "protected," the problem can usually be solved by turning off the User Access Control (UAC) feature in Windows.</p>
 <p>
-Problems can also occur if you are using a computer with a  64 bit opertating system but are running a 32 bit version of  Windows Kerberos. Note that Windows Kerberos is <b>not</b> the same application as Kerberos for Windows; it is the application that your Windows Logon session uses to issue Kerberos tickets.
+Problems can also occur if you are using a computer with a  64 bit opertating system but are running a 32 bit version of  Windows Kerberos. Note that Windows Kerberos is <b>not</b> the same application as MIT Kerberos; it is the application that your Windows Logon session uses to issue Kerberos tickets.
 
  </p>
 <p>
@@ -52,7 +52,7 @@ Problems can also occur if you are using a computer with a  64 bit opertating sy
 
 <H3> <a name="set-preferences"> How do I set properties like the default ticket lifetime?</a></H3>
 <p>
-You cannot use the Kerberos for Windows program to set properties such as default ticket lifetimes. Instead, edit the appropriate configuration file. For more information, visit the <a href="http://web.mit.edu/kerberos/krb5-current/doc/krb_admins/conf_files/index.html" target="new"> MIT Kerberos documentation site. </a>
+You cannot use the MIT Kerberos program to set properties such as default ticket lifetimes. Instead, edit the appropriate configuration file. For more information, visit the <a href="http://web.mit.edu/kerberos/krb5-current/doc/krb_admins/conf_files/index.html" target="new"> MIT Kerberos documentation site. </a>
  </p>
 <p>
 <a href="#top">Back to top</a></p>
