--- a/src/windows/leash/htmlhelp/html/View_Menu.htm
+++ b/src/windows/leash/htmlhelp/html/View_Menu.htm
@@ -75,7 +75,7 @@ This column is only available when you have  Kerberos tickets obtained by loggin
 <p></p>
 <a href="HTML/Tickets.htm#importable">About importable (Windows domain) tickets</a>
 </td>
-<td><a name="import-status">The import status tells you what  application was used to obtain the ticket, and what application can fully use it now.</a>  Tickets originally obtained by starting  a Windows Logon session in a domain are <em> imported</em> or <em>importable</em> to Kerberos for Windows, or they are <em>protected</em> from being imported. <p></p> Tickets obtained with the Get Ticket window are eithe <em>exportable</em> or <em>exported</em> to the Windows Logon session. <a href="HTML/Import_Status.htm">Import Status meanings</a>
+<td><a name="import-status">The import status tells you what  application was used to obtain the ticket, and what application can fully use it now.</a>  Tickets originally obtained by starting  a Windows Logon session in a domain are <em> imported</em> or <em>importable</em> to MIT Kerberos, or they are <em>protected</em> from being imported. <p></p> Tickets obtained with the Get Ticket window are eithe <em>exportable</em> or <em>exported</em> to the Windows Logon session. <a href="HTML/Import_Status.htm">Import Status meanings</a>
 
  </td>
 </td>
