--- a/src/windows/leash/htmlhelp/html/Windows_Logon_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Windows_Logon_Tickets.htm
@@ -8,9 +8,9 @@
 <BODY>
 <H1>Windows Domain Tickets</H1>
 <p>
-Kerberos for Windows is not the only interface for managing Kerberos tickets. When you log on to a Windows domain, you are issued a Kerberos ticket through your Windows Logon session. This ticket is automatically renewed until you log out of the session, when it is destroyed.</p>
+MIT Kerberos is not the only interface for managing Kerberos tickets. When you log on to a Windows domain, you are issued a Kerberos ticket through your Windows Logon session. This ticket is automatically renewed until you log out of the session, when it is destroyed.</p>
 <p>
-Sometimes applications that require Kerberos authentication only work with Keberos for Windows. Others work only with the interface that is part of the Windows Logon session. For this reason, you can use Kerberos for Windows to either import tickets from your Windows Logon session or to export tickets into it, depending on your needs.
+Sometimes applications that require Kerberos authentication only work with MIT Keberos. Others work only with the interface that is part of the Windows Logon session. For this reason, you can use MIT Kerberos to either import tickets from your Windows Logon session or to export tickets into it, depending on your needs.
 </p>
 <p></p>
 <table>
