--- a/src/windows/leash/htmlhelp/html/Debugging.htm
+++ b/src/windows/leash/htmlhelp/html/Debugging.htm
@@ -8,9 +8,9 @@
 <BODY>
 <H1>Debugging</h1>
 <p> 
-Kerberos for Windows is an interface to the Kerberos protocol. It issues commands to the Kerberos server on your behalf in response to buttons you click and options you select.</p>
+MIT Kerberos is an interface to the Kerberos protocol. It issues commands to the Kerberos server on your behalf in response to buttons you click and options you select.</p>
 <p>
-If you are having a problem with Kerberos for Windows not working as you expect, or you if you are writing an application that depends on Kerberos tickets, you might want to see exactly what commands are being issued on your behalf 
+If you are having a problem with MIT Kerberos not working as you expect, or you if you are writing an application that depends on Kerberos tickets, you might want to see exactly what commands are being issued on your behalf 
 
 
 </BODY>
