--- a/src/windows/leash/htmlhelp/html/Import_Status.htm
+++ b/src/windows/leash/htmlhelp/html/Import_Status.htm
@@ -9,7 +9,7 @@
 
 <H1>Import Status </H1>
 <p>
-The Import Status column in the main window shows whether tickets were obtained with the Get Ticket function in  Kerberos for Windows or if they were obtained by a Windows Logon session when you logged on to a domain, and whether they have been imported or exported to the other application.  </p>
+The Import Status column in the main window shows whether tickets were obtained with the Get Ticket function in  MIT Kerberos or if they were obtained by a Windows Logon session when you logged on to a domain, and whether they have been imported or exported to the other application.  </p>
 <p>
 Use the Import Status checkbox in the View section of the menu to show or hide the column. <a href="HTML/View_Menu.htm">Using the View menu </a></p>
 
@@ -21,7 +21,7 @@ Use the Import Status checkbox in the View section of the menu to show or hide t
 <th id="th2">imported</th> 
 <td>The tickets were obtained when you started a Windows Logon session by logging in to a domain.
 <p></p>
-They have been imported into Kerberos for Windows. </td>
+They have been imported into MIT Kerberos. </td>
 
 </tr><tr>
 <th id="th2">importable</th> 
