--- a/src/windows/leash/htmlhelp/html/Import_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Import_Tickets.htm
@@ -14,7 +14,7 @@ vertical-align:top;
 <BODY>
 <H1><a name="top">Import Tickets</a></H1>
 <p>
-You can import Windows domain tickets that you have already obtained through a Windows Logon session. Imported tickets can be fully used by applications that require the Kerberos for Windows interface. In most installations, Kerberos for Windows will automatically import these tickets if possible. 
+You can import Windows domain tickets that you have already obtained through a Windows Logon session. Imported tickets can be fully used by applications that require the MIT Kerberos interface. In most installations, MIT Kerberos will automatically import these tickets if possible. 
 
 
 <p></p>
@@ -43,21 +43,21 @@ You can import Windows domain tickets that you have already obtained through a W
 
 <H2><a name="auto-import">Turn Automatic Import on or off </a></H2>
 <p>
-In most installations, Kerberos for Windows will automatically import tickets if possible.   Click the Automatic Import checkbox in the Options panel to turn the feature on or off. <a href="HTML/Options_Menu.htm">Using the Options Panel </a>
+In most installations, MIT Kerberos will automatically import tickets if possible.   Go to the Options tab and click the Automatic Import Tickets checkbox in the Ticket Options panel to turn the feature on or off. <a href="HTML/Options_Menu.htm">Using the Options Panel </a>
 </p><p>
-In some cases Kerberos for Windows tries to automatically import tickets but is prevented from doing so by the Windows User Access Control (UAC) feature. If this happens the tickets are still displayed in the main window, but have the Import Status of <i>protected.</i> You can turn off UAC on your computer to allow the tickets to be imported. 
+In some cases MIT Kerberos tries to automatically import tickets but is prevented from doing so by the Windows User Access Control (UAC) feature. If this happens the tickets are still displayed in the main window, but have the Import Status of <i>protected.</i> You can turn off UAC on your computer to allow the tickets to be imported. 
 </p>
 <p>
 <a href=#top>Back to top</a></p>
 
 <H2><a name="import-status">Read ticket Import Status</a></H2>
 <p>
-If you have tickets obtained when you  logged on to a Windows domain with a Windows Logon session, the main window of Kerberos for Windows shows the Import Status for all of your tickets. You can hide or show this column with the View panel checkboxes. <a href="HTML/View_Menu.htm">Using the View Panel </a>
+If you have tickets obtained when you  logged on to a Windows domain with a Windows Logon session, the main window of MIT Kerberos shows the Import Status for all of your tickets. 
 </p>
 <ul id="helpul">
-<li><b>imported</b> tickets have already been imported into Kerberos for Windows. </li>
-<li><b>importable</b> tickets have not been imported into Kerberos for Windows but can be. To import them, either turn on the Automatic Import option or click Import Tickets in the More panel.</li>
-<li><b>protected</b> tickets cannot currently be imported into Kerberos for Windows because the Windows User Access Control (UAC) is preventing this action.  You can turn off UAC on your computer to allow the tickets to be imported. </li>
+<li><b>imported</b> tickets have already been imported into MIT Kerberos. </li>
+<li><b>importable</b> tickets have not been imported into MIT Kerberos but can be. To import them, either turn on the Automatic Import Tickets option in the Options tab or click the Import Tickets button in the Home tab.</li>
+<li><b>protected</b> tickets cannot currently be imported into MIT Kerberos because the Windows User Access Control (UAC) is preventing this action.  You can turn off UAC on your computer to allow the tickets to be imported. </li>
 </ul><p>
 <a href="HTML/Import_Status.htm">Full list of Import Status meanings</a></p>
 <p></p>
@@ -68,9 +68,9 @@ If you have tickets obtained when you  logged on to a Windows domain with a Wind
 <p>
 If the Automatic Import option is turned off, you can still import tickets. 
 <ol>
-<li>Find the More panel at the right edge of the ribbon menu. </li>
-<li>Click the More button to see your choices and select Import Tickets. </li>
-<li>Click Okay to confirm that you want to import your tickets and destroy any that are already in Kerberos for Windows. </li>
+<li>Go to the Home tab.</li>
+<li>Click the Import Tickets button. </li>
+<li>Click Okay to confirm that you want to import your tickets and destroy any that are already in MIT Kerberos. </li>
 </ol>
 
 </p>
