--- a/src/windows/leash/htmlhelp/html/Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/Tickets.htm
@@ -9,13 +9,11 @@
 <BODY>
  <H1><a name="top">About Tickets</a></H1>
 <p>
-The Kerberos for Windows program helps you manage your  Kerberos tickets.  Click the Get Ticket  button and enter your principal (your Kerberos identity) and password to obtain a ticket. The ticket allows you to securely access all of the computers and services set up to authenticate you through Kerberos, until the ticket expires, without requiring you to enter your password again. <br>
-<a href="HTML/Get_Tickets.htm">How to get tickets</a>
+The MIT Kerberos program helps you manage your  Kerberos tickets.  Click the Get Ticket  button and enter your principal (your Kerberos identity) and password to obtain a ticket. The ticket allows you to securely access all of the computers and services set up to authenticate you through Kerberos, until the ticket expires, without requiring you to enter your password again.
  </p>
 <p>
  If you have logged on to a Windows domain, you already have a Keberos ticket. This ticket is marked in the main window with an Import Status of "imported," "importable," or "protected."
-<br>
-<a href="HTML/Tickets.htm#importable">About Windows domain tickets</a>
+
 </p>
 <table>
 <tr><th>On this page</th><th>On other pages</th></tr>
@@ -47,10 +45,10 @@ The Kerberos for Windows program helps you manage your  Kerberos tickets.  Click
 
 <table>
 <tr><th colspan="2"><a name="expiration">Ticket Expiration</a></th></tr>
-<tr><td colspan="2">Your tickets are valid for a set amount of time before they expire and cannot be used again.  Usually tickets are valid for around the length of a work day (e.g., 8 hours).  A pop up window warns you 15, 10, and 5 minutes before your tickets expire. To add an audible alarm at the same intervals, select Expiration Alarm in the Options panel.</td></tr>
+<tr><td colspan="2">Your tickets are valid for a set amount of time before they expire and cannot be used again.  Usually tickets are valid for around the length of a work day (e.g., 8 hours).  A pop up window warns you 15, 10, and 5 minutes before your tickets expire. To add an audible alarm at the same intervals, go to the Options tab and select Expiration Alarm in the Ticket Options panel.</td></tr>
 <tr> <th id="th2">Adjust</th><th id="th2">View</th></tr>
 <tr>
-<td>When you get your ticket, click Show Advanced Settings to view and adjust the ticket's lifetime. Note that some Kerberos configurations will not allow this.  <br> <a href="HTML/Get_Tickets.htm">Get Tickets help</a></td>
+<td>When you get your ticket, click Show Advanced to view and adjust the ticket's lifetime. Note that some Kerberos configurations will not allow this.  <br> <a href="HTML/Get_Tickets.htm">Get Tickets help</a></td>
 <td>The main window includes a <b>Valid Until</b> column for each of your tickets. After the time listed in this column, the ticket will expire and you must get a new ticket to access network resources that use Kerberos. <br> <a href="HTML/View_Tickets.htm">View Tickets help</a></td>
 </tr>
 </table>
@@ -64,21 +62,21 @@ The Kerberos for Windows program helps you manage your  Kerberos tickets.  Click
 <tr> <th id="th2">Renewable Ticket Expiration</th>
 <td>Renewable tickets have a normal ticket lifetime, but they also have a  renewable lifetime that is much longer (usually several days). Each time you renew your ticket, Kerberos resets the ticket lifetime to the length of the orginal ticket. You can renew the ticket as often as you need to (once at time or automatically) until the renewable lifetime is reached. Then you must obtain a new ticket.  </td></tr>
 <tr> <th id="th2">Obtain Renewable Tickets</th>
-<td>When you get your ticket, click Show Advanced Settings and  then select Renewable under "Flag this ticket as." Use the Renewable Until slider to adjust the  tickets's renewable lifetime. <br> 
+<td>When you get your ticket, click Show Advanced and  then select Renewable under "Flag this ticket as." Use the Renewable Until slider to adjust the  tickets's renewable lifetime. <br> 
 <a href="HTML/Get_Tickets.htm">Get Tickets help</a></td>
 </tr>
 <tr> <th id="th2">Renew Once</th>  
 <td> Click the Renew button. Note that you cannot renew expired tickets even if the ticket is still within its renewable lifespan.  <br> 
  <a href="HTML/Renew_Tickets.htm#renew-once">Renew Ticket Once help</a></td></tr>
 <th id="th2">Renew Automatically</th>
-<td>Select Automatic Ticket Renewal in the Options panel. Note that  Leash must be active and running in order to renew tickets. This means that if your machine is in hibernation mode or if Leash is not running when it is time to renew your tickets, your tickets will not be renewed.  <br> 
+<td>Go to the Options tab and select Automatic Ticket Renewal in the Ticket Options panel. Note that  MIT Kerberos must be active and running in order to renew tickets. This means that if your machine is in hibernation mode or if MIT Kerberos is not running when it is time to renew your tickets, your tickets will not be renewed.  <br> 
 <a href="HTML/Renew_Tickets.htm#renew-once">Renew Tickets Automatically help</a> </td>
 </tr><tr>
 <th id="th2">View </th>
 <td>
-The View panel offers optional informational columns for your tickets. Two columns relate to renewable tickets: Renewable Until and Flags.
+In the Options tab, the View Options panel checkboxes control what information is displayed for your tickets. Two columns relate to renewable tickets: Renewable Until and Flags.
 <p></p>
-To see the date and  time your renewable tickets expire and can no longer be renewed, click Renewable Until in the View panel. To see which of your tickets are renewable, click Flags.
+To see the date and  time your renewable tickets expire and can no longer be renewed, go to the Options tab and select the Renewable Until checkbox in the View Options panel. To see which of your tickets are renewable, select Flags.
 <br>
  <a href="HTML/View_Tickets.htm">View Tickets help</a> </td>
 </tr>
@@ -88,12 +86,12 @@ To see the date and  time your renewable tickets expire and can no longer be ren
 <p></p>
 <table>
 <tr><th colspan="2"><a name="forwardable">Forwardable Tickets </a></th></tr>
-<tr><td colspan="2">When you get your ticket, you have the option of flagging the ticket as forwardable and proxiable. Forwardable tickets can be forwarded to the remote host when you connect via telnet, ssh, ftp, rlogin, or similar applications, so you will not need to get new tickets to use remote services.</td></tr>
+<tr><td colspan="2">When you get your ticket, you have the option of flagging the ticket as forwardable and proxiable. Forwardable and proxiable tickets can be forwarded to the remote host when you connect via telnet, ssh, ftp, rlogin, or similar applications, so you will not need to get new tickets to use remote services.</td></tr>
 <tr> <th id="th2">Obtain Forwardable Tickets</th><th id="th2"> View</th></tr>
 <tr>
-<td>When you get your ticket, click Show Advanced Settings and  then select Forwardable and Proxiable under "Flag this ticket as."   <br> 
+<td>When you get your ticket, click Show Advanced and  then select Forwardable and Proxiable under "Flag this ticket as."   <br> 
 <a href="HTML/Get_Tickets.htm">Get Ticket help</a></td>
-<td> The View panel offers optional informational columns for your tickets.  Select Flags to open a column indicating which of your tickets are forwardable. <br> <a href="HTML/View_Tickets.htm">View Tickets help</a> </td>
+<td> In the Options tab, the View Options panel checkboxes control what information is displayed for your tickets. Select the Flags checkbox to open a column indicating which of your tickets are forwardable. <br> <a href="HTML/View_Tickets.htm">View Tickets help</a> </td>
 </tr>
 </table>
 <p>
@@ -103,20 +101,20 @@ To see the date and  time your renewable tickets expire and can no longer be ren
 <tr><th colspan="2"><a name="importable">Importable (Windows domain) Tickets </a> </th></tr>
 <tr><td colspan="2">Most Windows operating systems use the Kerberos protocol behind the scenes to authenticate you when you  log on to a Windows domain with a Windows Logon session. This means that if you have logged on to a Windows domain (not just to your computer), Windows probably issued you a Kerberos ticket. 
 <p></p>
-Some applications that use Kerberos accept tickets issued through a Windows Logon session. Others need to use the Kerberos for Windows interface. In most installations,  Kerberos for Windows will attempt to automatically import any tickets already issued to you. Imported tickets can take full advantage of the Kerberos for Windows interface. 
+Some applications that use Kerberos accept tickets issued through a Windows Logon session. Others need to use the MIT Kerberos interface. In most installations,  MIT Kerberos will attempt to automatically import any tickets already issued to you. Imported tickets can take full advantage of the MIT Kerberos interface. 
 <p></p>
 Windows domain tickets obtained through your Windows Logon session are automatically renewed until you exit your Windows Logon session.
  </td>
 <tr> <th id="th2">Import Status</th>
-<td>If you have tickets obtained through a  Windows Logon session, the main window of Kerberos for Windows shows the Import Status for all of your tickets. You can hide or show this column with the View panel checkboxes. Tickets originally obtained through a Windows Logon session are <em> imported</em> or <em>importable</em> to Kerberos for Windows, or they are <em>protected</em> from being imported. <br> 
+<td>If you have tickets obtained through a  Windows Logon session, the main window of MIT Kerberos shows the Import Status for all of your tickets. You can hide or show this column with the View Options panel checkboxes in the Options tab. Tickets originally obtained through a Windows Logon session are <em> imported</em> or <em>importable</em> to MIT Kerberos, or they are <em>protected</em> from being imported. <br> 
 <a href="HTML/Import_Status.htm">Import Status meanings</a></td>
 </td></tr>
 <tr> <th id="th2">Import/Don't Import Tickets</th>
-<td>You can turn the Automatic Import option on or off by clicking the Automatic Import checkbox in the Option panel. You can also import tickets directly by selecting Import Tickets in the More panel.  <br> 
+<td>You can turn the Automatic Import option on or off by clicking the Automatic Import checkbox in the Ticket Options panel in the Options tab. You can also import tickets directly by clicking the Import Tickets button in the Home tab.  <br> 
 <a href="HTML/Import_Tickets.htm">Import Tickets help</a></td>
 </tr>
 <tr> <th id="th2">Renew Imported Tickets</th>  
-<td>  If the Automatic Import option is selected, you do not need to renew your imported tickets as they will automatically be renewed through your Windows Logon session and re-imported into Kerberos for Windows. </td></tr>
+<td>  If the Automatic Import option is selected, you do not need to renew your imported tickets as they will automatically be renewed through your Windows Logon session and re-imported into MIT Kerberos. </td></tr>
 <th id="th2">Destroy Imported Tickets</th>
 <td>If the Automatic Import option is selected, you cannot directly destroy imported tickets. They are destroyed when you exit your Windows Logon session. <br> 
 <a href="HTML/Destroy_Tickets.htm#imported">Destroy Tickets help</a> </td>
