--- a/src/windows/leash/htmlhelp/html/View_Tickets.htm
+++ b/src/windows/leash/htmlhelp/html/View_Tickets.htm
@@ -8,9 +8,9 @@
 <BODY>
 <H1>View Tickets</H1>
 <p>
- Kerberos for Windows displays your tickets in the main window. The tickets (if any) are organized by the <a href="JavaScript:popup.TextPopup(popupPrincipal, popfont,9,9,-1,-1)">principal</a> who owns them.  To the right of the principal are columns with information about the tickets.
+ MIT Kerberos displays your tickets in the main window. The tickets (if any) are organized by the <a href="JavaScript:popup.TextPopup(popupPrincipal, popfont,9,9,-1,-1)">principal</a> who owns them.  To the right of the principal are columns with information about the tickets.
 <ul>
-<li>To show or hide information columns,  use the View panel. <a href="HTML/View_Menu.htm">Using the View Panel </a> </li>
+<li>To show or hide information columns,  use the View Options panel in the Options tab. <a href="HTML/View_Menu.htm">Using the View Panel </a> </li>
 <li>To make a column wider or narrower, click and drag the line separating two column headings. </li>
 <li>To see information for all of a principal's tickets, click the blue arrow next to the principal name. Otherwise the information displayed applies only to the initial Ticket Granting Ticket (TGT). </li>
 </ul>
@@ -74,7 +74,7 @@ If this column shows <em>Not Renewable</em>, the ticket was not flagged as renew
 
 <td> <a name="valid-until"> The date and time the ticket will expire and can no longer be used or renewed.</a> If the column is <a href="JavaScript:popup.TextPopup(popupWideEnough, popfont,9,9,-1,-1)"> wide enough</a> you will also see the number of  hours and minutes remaining before the ticket expires. Kerberos alerts you to expiring tickets with a warning in a pop up window. 
 <p></p>
-To add an audible warning, select <b>Expiration Alarm</b> in the Options panel. <br>
+To add an audible warning, open the Options tab and select <b>Expiration Alarm</b> in the Ticket Options panel. <br>
 <a href="HTML/Options_Menu.htm">Using the Options Panel</a>
 </td>
 </tr>
@@ -95,9 +95,9 @@ To add an audible warning, select <b>Expiration Alarm</b> in the Options panel. 
 </tr>
 <tr><th id="th2"> Import Status  </th> 
 <td>
-<a name="import-status">This column is only available when you have Kerberos tickets for a Windows domain obtained by starting a Windows Logon session. </a>It shows whether Kerberos for Windows was used to obtain the tickets or if they were obtained when you logged on to a  domain through a Windows Logon session, and whether the ticket has been shared with the other  application.
+<a name="import-status">This column is only available when you have Kerberos tickets for a Windows domain obtained by starting a Windows Logon session. </a>It shows whether MIT Kerberos was used to obtain the tickets or if they were obtained when you logged on to a  domain through a Windows Logon session, and whether the ticket has been shared with the other  application.
 <p></p>
-Tickets originally obtained through a Windows Logon session  are 'imported' or 'importable' to Kerberos for Windows, or they are 'protected' from being imported. <p></p> Tickets obtained with the Get Ticket window are either 'exported' or 'exportable' to the Windows domain. 
+Tickets originally obtained through a Windows Logon session  are <em>imported</em> or <em>importable</em> to MIT Kerberos, or they are <em>protected</em> from being imported. <p></p> Tickets obtained with the Get Ticket window are either <em>exported</em> or <em>exportable</em> to the Windows domain. 
 <p></p>
  <a href="HTML/Import_Status.htm">More about Import Status meanings</a>
 
